# data-visualization

./: README.md  mpl_sqares.py  pyproject.toml
chapter-17/: __init__.py  python_repos.html  python_repos.py  python_repos_visual.py
examples/: __init__.py  d6.html  d6_d10.html  dice.py  dice_visual.py  double_d6.html  double_dice_visual.py  eq_explore_data.py  global_earthquakes.html  mpl_squares.py  random_walk.py  rw_visual.py  scatter_squares.py  sitka_highs.py  sitka_highs_lows.py
