[tool.poetry]
name = "data-visualization"
version = "0.1.0"
description = ""
authors = ["Iaroslav <GunGalla@gmail.com>"]
readme = "README.md"
packages = [{include = "data_visualization"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.3"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
